# Waypoint_Manager

./: .gitignore  README.md  RUNBOOK.md  package.xml  setup.py
config/: vertices.yaml
config/legs/: 1_to_2.yaml  1_to_3.yaml  1_to_4.yaml  2_to_1.yaml  2_to_3.yaml  2_to_4.yaml  3_to_1.yaml  3_to_2.yaml  3_to_4.yaml  4_to_1.yaml  4_to_2.yaml  4_to_3.yaml
launch/: waypoint_manager.launch.py
waypoint_manager/: diagnostics_logger.py  leg_loader.py  waypoint_manager_node.py
